feat: Postgres Conection - Repository implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=Decola-Tech-API-Project
+# Conversion to YAML from Properties formar report
+# Warnings:
+# - The yaml file had comments which are lost in the refactoring!
+spring.datasource.url=jdbc\:postgresql\://localhost\:5432/db_dio
+spring.datasource.username=postgres
+spring.datasource.password=123a123a
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=create
