feat: controller and service - Model adjust

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 # Conversion to YAML from Properties formar report
 # Warnings:
 # - The yaml file had comments which are lost in the refactoring!
-spring.datasource.url=jdbc\:postgresql\://localhost\:5432/db_dio
+spring.datasource.url=jdbc\:postgresql\://localhost\:5432/api_Test
 spring.datasource.username=postgres
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.datasource.password=123a123a
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
